ops/deploy/k8s/overlays/cloud-generic/patch-backend-scale.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: funforum
spec:
  replicas: 3
